@@ -11,7 +11,11 @@ squid (6.1-1) UNRELEASED; urgency=medium
     - remove 1f13f721263a4cc75e4b798a230022561047899c.patch integrated upstream
     - remove edad3f150de8af0aeb2f629508be3219b83369b9.patch integrated upstream
 
- -- Amos Jeffries <amosjeffries@squid-cache.org>  Sat,  8 Jul 2023 03:12:00 +1300
+  [ Luigi Gangitano <luigi@debian.org> ]
+  * debian/patches/
+    - add Fordwarded tag
+
+ -- Amos Jeffries <amosjeffries@squid-cache.org>  Fri, 16 Jun 2023 19:00:00 +1300
 
 squid (5.7-2) unstable; urgency=medium
 
